WIP: creating fast math operations